--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.js",
   "files": [
-    "dist/"
+    "dist",
+    "src"
   ],
   "scripts": {
     "lint": "eslint . --ext .js,.ts",
