--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "scripts": {
     "lint": "eslint . --ext .js,.ts",
     "build": "tsc -p ./tsconfig.json",
+    "prepublishOnly": "npm run build",
     "test": "jest",
     "format": "prettier --write ."
   },
