--- a/package.json
+++ b/package.json
@@ -33,22 +33,26 @@
     "src"
   ],
   "scripts": {
-    "lint": "eslint . --ext .js,.ts",
+    "lint": "eslint src/**",
     "build": "tsc -p ./tsconfig.json",
     "prepublishOnly": "npm run build",
     "test": "jest",
     "format": "prettier --write ."
   },
   "devDependencies": {
+    "@eslint/js": "^9.11.0",
     "@types/jest": "^29.5.13",
     "@typescript-eslint/eslint-plugin": "^8.6.0",
     "@typescript-eslint/parser": "^8.6.0",
     "eslint": "^9.11.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.9.0",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.6.0"
   }
 }
